# pShell

./: .gitignore  .js  .qmlls.ini  CMakeLists.txt  fuzzysort.js  shell.qml
components/: ConnectionHeader.qml  LauncherModule.qml  PropertyRow.qml  RadialSliderIcon.qml  SectionContainer.qml  SettingRow.qml  SettingSection.qml  StateLayer.qml  StyledIcon.qml  StyledText.qml
components/containers/: StyledWindow.qml
components/controls/: AnimScrollBar.qml  CircularIndicator.qml  CollapsibleSection.qml  CustomSpinBox.qml  IconButton.qml  IconTextButton.qml  Menu.qml  SpinBoxRow.qml  SplitButton.qml  SplitButtonRow.qml  StyledSwitch.qml  StyledTextField.qml  SwitchRow.qml  Tooltip.qml
components/misc/: CustomShortcut.qml
config/: Appearance.qml  Config.qml
config/backgroundsconfig/: BackgroundsConfig.qml
config/barconfig/: BarConfig.qml  GroupData.qml
config/barconfig/components/: ActiveWsConfig.qml  KbPreviewConfig.qml  OccupiedWsConfig.qml  TrayConfig.qml  UnitWsConfig.qml  WorkspacesConfig.qml
config/cornersconfig/: CornersConfig.qml
config/hypr/: hyprland.conf
config/launcherconfig/: LauncherConfig.qml
config/launcherconfig/structures/: AnchorsData.qml  OffsetsData.qml  PaddingsData.qml
drawers/: Drawers.qml
drawers/backgrounds/: Backgrounds.qml
drawers/backgrounds/components/: Background.qml
drawers/border/: Border.qml
drawers/corners/: Corners.qml
drawers/exclusions/: Exclusions.qml
drawers/panels/: Panels.qml
modules/bar/: BarWrapper.qml
modules/bar/content/: Begin.qml  Center.qml  End.qml
modules/launcher/: LauncherWrapper.qml  LocalSearcher.qml  ModuleManager.qml
modules/launcher/content/: LeftPanel.qml  RightPanel.qml  RowInput.qml  UniversalDelegate.qml
modules/settings/: Settings.qml  SettingsContent.qml
modules/settings/pages/: PlaceholderPage.qml
services/: Apps.qml  Colours.qml  Hypr.qml  Time.qml
utils/: BackgroundsManager.qml  FocusManager.qml  Icons.qml  InputManager.qml  Paths.qml  PerMonitorVisibilities.qml  PopoutsManager.qml  Searcher.qml  VisibilitiesManager.qml
widgets/: StyledIcon.qml  StyledText.qml
(+19 files in other folders)
